--- a/src/components/MyForm/MyForm.module.scss
+++ b/src/components/MyForm/MyForm.module.scss
@@ -18,3 +18,25 @@
         box-shadow: 0px 0px 2px 2px rgba(0,0,0,0.3);
     }
 }
+.btn{
+    border: unset;
+    background-color: transparent;
+    border-radius: 15px;
+    padding: 15px;
+    cursor: pointer;
+    color: #fff;
+    font-size: 20px;
+    transition: .3s all linear;
+}
+.submit{
+    background-color: rgb(16, 179, 16);
+    &:hover, &:focus{
+        background-color: rgb(11, 145, 11);
+    }
+}
+.delete{
+    background-color: rgb(187, 28, 28);
+    &:hover, &:focus{
+        background-color:rgb(141, 16, 16);
+    }
+}
