--- a/src/components/Container/Container.module.scss
+++ b/src/components/Container/Container.module.scss
@@ -1,4 +1,8 @@
 .container{
-    max-width: 800px;
+    max-width: 830px;
+    padding: 0 15px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
     width: 100%;
 }
