--- a/src/components/MyForm/MyForm.module.scss
+++ b/src/components/MyForm/MyForm.module.scss
@@ -30,13 +30,13 @@
 }
 .submit{
     background-color: rgb(16, 179, 16);
-    &:hover, &:focus{
+    &:hover{
         background-color: rgb(11, 145, 11);
     }
 }
 .delete{
     background-color: rgb(187, 28, 28);
-    &:hover, &:focus{
+    &:hover{
         background-color:rgb(141, 16, 16);
     }
 }
