--- a/src/components/MyForm/MyForm.module.scss
+++ b/src/components/MyForm/MyForm.module.scss
@@ -11,6 +11,7 @@
     font-size: 20px;
     border-radius: 15px;
     transition: .3s all linear;
+    background: rgba(255, 255, 255, 0.598);
     &:hover{
         box-shadow: 0px 0px 2px 2px rgba(0,0,0,0.3);
     }
